Alterações Front End

--- a/exemplo_crud_storage.html
+++ b/exemplo_crud_storage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRUD</title>
+    <title>SISTEMA DE CADASTRO</title>
     <style>
         /* Estilos para as divs */
         .container {
@@ -26,7 +26,7 @@
 <div class="container">
     <!-- Div da esquerda com formulário -->
     <div class="left">
-        <h2>Formulário</h2>
+        <h2>Cadastro de Pessoas</h2>
             <label for="nome">Nome:</label><br>
             <input type="text" id="inputNome" name="nome"><br>
             <label for="email">E-mail:</label><br>
@@ -39,7 +39,7 @@
 
     <!-- Div da direita com tabela -->
     <div class="right">
-        <h2>Tabela</h2>
+        <h2>Pessoas </h2>
         <table border="1">
             <thead>
                 <tr>
